герой для всех девайсов

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </header>
     <main>
       <!--Герой-->
-      <!-- <section class="hero hero-fon">
+      <section class="hero hero-fon">
         <div class="container">
           <h1 class="hero-title">
             Эффективные решения <br />
@@ -79,7 +79,7 @@
             Заказать услугу
           </button>
         </div>
-      </section> -->
+      </section>
 
       <!--Особенности-->
       <!-- <section class="section subsection">
