секция чем мы занимаемся

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </section>
 
       <!--Особенности-->
-      <!-- <section class="section subsection">
+      <section class="section subsection">
         <div class="container">
           <h2 class="section-title hidden">Особенности</h2>
           <ul class="features-list list">
@@ -138,17 +138,18 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--Чем мы занимаемся-->
-      <!-- <section class="section">
+      <section class="section occupation-section">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="occupation-list list">
             <li class="occupation-item">
               <img
                 class="occupation-img"
-                src="./images/portfolio/projekt-9.jpg"
+                srcset="./images/notebook.jpg 1x, ./images/notebook@2x.jpg 2x"
+                src="./images/notebook.jpg"
                 alt="Ноутбук"
                 width="370"
                 height=""
@@ -159,6 +160,10 @@
             <li class="occupation-item">
               <img
                 class="occupation-img"
+                srcset="
+                  ./images/mobile-applications.jpg    1x,
+                  ./images/mobile-applications@2x.jpg 2x
+                "
                 src="./images/mobile-applications.jpg"
                 alt="Мобильный"
                 width="370"
@@ -179,7 +184,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--Наша команда-->
       <!-- <section class="section team">
