--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <button class="button" data-open-modal>
-            Заказать услугу
-          </button>
+          <button class="button" data-open-modal>Заказать услугу</button>
         </div>
       </section>
 
@@ -187,19 +185,32 @@
       </section>
 
       <!--Наша команда-->
-      <!-- <section class="section team">
+      <section class="section team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
 
           <ul class="team-list list">
             <li class="team-item">
-              <img
-                class="team-img"
-                src="./images/nikolay-kucherenko.jpg"
-                alt="Фотография"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/nikolay-kucherenko.jpg    1x,
+                    ./images/nikolay-kucherenko@2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/nikolay-kucherenko-mob.jpg    1x,
+                    ./images/nikolay-kucherenko-mob@2x.jpg 2x
+                  "
+                />
+                <img
+                  class="team-img"
+                  src="./images/nikolay-kucherenko-mob.jpg"
+                  alt="Фотография"
+                />
+              </picture>
               <h3 class="team-name">Николай Кучеренко</h3>
               <p lang="en" class="team-position">Product Designer</p>
 
@@ -234,13 +245,18 @@
             </li>
 
             <li class="team-item">
-              <img
-                class="team-img"
-                src="./images/olga-ivanova.jpg"
-                alt="Фотография"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./images/olga-ivanova.jpg 1x, ./images/olga-ivanova@2x.jpg 2x"
+                  media="(min-width:1200px)" />
+                <source
+                  srcset="
+                    ./images/olga-ivanova-mob.jpg    1x,
+                    ./images/olga-ivanova-mob@2x.jpg 2x
+                  " />
+                <img class="team-img" src="./images/olga-ivanova-mob.jpg" alt="Фотография"
+              /></picture>
+
               <h3 class="team-name">Ольга Иванова</h3>
               <p lang="en" class="team-position">Frontend Developer</p>
 
@@ -276,13 +292,26 @@
             </li>
 
             <li class="team-item">
-              <img
-                class="team-img"
-                src="./images/andrey-shevchenko.jpg"
-                alt="Фотография"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/andrey-shevchenko.jpg    1x,
+                    ./images/andrey-shevchenko@2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/andrey-shevchenko-mob.jpg    1x,
+                    ./images/andrey-shevchenko-mob@2x.jpg 2x
+                  "
+                />
+                <img
+                  class="team-img"
+                  src="./images/andrey-shevchenko-mob.jpg"
+                  alt="Фотография"
+                />
+              </picture>
               <h3 class="team-name">Андрей Шевченко</h3>
               <p lang="en" class="team-position">Marketing</p>
 
@@ -317,13 +346,19 @@
             </li>
 
             <li class="team-item">
-              <img
-                class="team-img"
-                src="./images/ivan-nikolaev.jpg"
-                alt="Фотография"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="./images/ivan-nikolaev.jpg 1x, ./images/ivan-nikolaev@2x.jpg 2x"
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/ivan-nikolaev-mob.jpg    1x,
+                    ./images/ivan-nikolaev-mob@2x.jpg 2x
+                  "
+                />
+                <img class="team-img" src="./images/ivan-nikolaev-mob.jpg" alt="Фотография" />
+              </picture>
               <h3 class="team-name">Иван Николаев</h3>
               <p lang="en" class="team-position">UI Designer</p>
 
@@ -358,7 +393,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--Постоянные клиенты-->
       <!-- <section class="section">
