адаптивные постоянные клиенты

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
       </section>
 
       <!--Постоянные клиенты-->
-      <!-- <section class="section">
+      <section class="section">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="customers-list list">
@@ -442,7 +442,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!--Подвал-->
