--- a/portfolio.html
+++ b/portfolio.html
@@ -298,72 +298,71 @@
     </main>
     <!--Подвал-->
     <footer class="footer">
-      <div class="container container-nav">
-        <div class="address-container">
-          <a class="logo logo-footer link" href="./index.html" lang="en"
-            ><span class="logo-blue">Web</span> Studio</a
-          >
-          <address class="footer-address">
-            <ul class="footer-address-list list">
-              <li class="footer-address-item">
-                <a
-                  href="https://goo.gl/maps/J7jLJM3ZXnViXDYy7"
-                  target="_blank"
-                  rel="noreferrer noopener"
-                  class="address-link-map link"
-                  >г. Киев, пр-т Леси Украинки, 26</a
-                >
+      <div class="container footer-container-nav">
+        <div class="address-call-container">
+          <div class="address-container">
+            <a class="logo logo-footer link" href="./index.html" lang="en"
+              ><span class="logo-blue">Web</span> Studio</a
+            >
+            <address class="footer-address">
+              <ul class="footer-address-list list">
+                <li class="footer-address-item">
+                  <a
+                    href="https://goo.gl/maps/J7jLJM3ZXnViXDYy7"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    class="address-link-map link"
+                    >г. Киев, пр-т Леси Украинки, 26</a
+                  >
+                </li>
+                <li class="footer-address-item">
+                  <a href="mailto:info@devstudio.com" class="address-link-mail link"
+                    >info@example.com</a
+                  >
+                </li>
+                <li class="footer-address-item">
+                  <a href="tel:+380961111111" class="address-link-tel link"
+                    >+38 099 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+
+          <div class="a-call-container">
+            <b class="a-call-subtitle">присоединяйтесь</b>
+
+            <ul class="social-list list">
+              <li class="social-item">
+                <a class="social-link link instagram" href="" aria-label="иконка инстаграма">
+                  <svg class="social-icon">
+                    <use href="./images/sprite.svg#instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="footer-address-item">
-                <a href="mailto:info@devstudio.com" class="address-link-mail link"
-                  >info@example.com</a
-                >
+              <li class="social-item">
+                <a class="social-link link twitter" href="" aria-label="иконка твитер">
+                  <svg class="social-icon">
+                    <use href="./images/sprite.svg#twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="footer-address-item">
-                <a href="tel:+380961111111" class="address-link-tel link">+38 099 111 11 11</a>
+              <li class="social-item">
+                <a class="social-link link facebook" href="" aria-label="иконка фейсбук">
+                  <svg class="social-icon">
+                    <use href="./images/sprite.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link link linkedin" href="" aria-label="иконка линкедин">
+                  <svg class="social-icon">
+                    <use href="./images/sprite.svg#linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-            <!-- <p class="address-text">
-              <span class="address-map"> г. Киев, пр-т Леси Украинки, 26</span> <br />
-              info@example.com <br />
-              +38 099 111 11 11
-            </p> -->
-          </address>
-        </div>
-
-        <div class="a-call-container">
-          <b class="a-call-subtitle">присоединяйтесь</b>
-
-          <ul class="social-list list">
-            <li class="social-item">
-              <a class="social-link link instagram" href="" aria-label="иконка инстаграма">
-                <svg class="social-icon">
-                  <use href="./images/sprite.svg#instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a class="social-link link twitter" href="" aria-label="иконка твитер">
-                <svg class="social-icon">
-                  <use href="./images/sprite.svg#twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a class="social-link link facebook" href="" aria-label="иконка фейсбук">
-                <svg class="social-icon">
-                  <use href="./images/sprite.svg#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a class="social-link link linkedin" href="" aria-label="иконка линкедин">
-                <svg class="social-icon">
-                  <use href="./images/sprite.svg#linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
 
         <div class="forma-container">
