--- a/portfolio.html
+++ b/portfolio.html
@@ -96,10 +96,12 @@
                 <div class="working-box">
                   <img
                     class="working-img"
-                    src="./images/portfolio/projekt-1.jpg"
+                    srcset="
+                      ./images/portfolio/project-1.jpg    1x,
+                      ./images/portfolio/project-1@2x.jpg 2x
+                    "
+                    src="./images/portfolio/project-1.jpg"
                     alt="Ноутбук"
-                    width="370"
-                    height="294"
                   />
                   <p class="working-second-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
@@ -118,10 +120,12 @@
                 <div class="working-box">
                   <img
                     class="working-img"
-                    src="./images/portfolio/projekt-2.jpg"
+                    srcset="
+                      ./images/portfolio/project-2.jpg    1x,
+                      ./images/portfolio/project-2@2x.jpg 2x
+                    "
+                    src="./images/portfolio/project-2.jpg"
                     alt="Баскетболисты"
-                    width="370"
-                    height="294"
                   />
                   <p class="working-second-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
@@ -132,7 +136,11 @@
 
                 <div class="card-content">
                   <h2 class="working-title">
-                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                    Постер
+                    <span lang="en"
+                      >New Orlean vs Golden <span class="dot">...</span>
+                      <span class="star">Star</span></span
+                    >
                   </h2>
                   <p class="working-text">Дизайн</p>
                 </div>
@@ -143,10 +151,12 @@
                 <div class="working-box">
                   <img
                     class="working-img"
-                    src="./images/portfolio/projekt-3.jpg"
+                    srcset="
+                      ./images/portfolio/project-3.jpg    1x,
+                      ./images/portfolio/project-3@2x.jpg 2x
+                    "
+                    src="./images/portfolio/project-3.jpg"
                     alt="Логотип ресторана"
-                    width="370"
-                    height="294"
                   />
                   <p class="working-second-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
@@ -165,10 +175,12 @@
                 <div class="working-box">
                   <img
                     class="working-img"
-                    src="./images/portfolio/projekt-4.jpg"
+                    srcset="
+                      ./images/portfolio/project-4.jpg    1x,
+                      ./images/portfolio/project-4@2x.jpg 2x
+                    "
+                    src="./images/portfolio/project-4.jpg"
                     alt="Наушники"
-                    width="370"
-                    height="294"
                   />
                   <p class="working-second-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
@@ -187,10 +199,12 @@
                 <div class="working-box">
                   <img
                     class="working-img"
-                    src="./images/portfolio/projekt-5.jpg"
+                    srcset="
+                      ./images/portfolio/project-5.jpg    1x,
+                      ./images/portfolio/project-5@2x.jpg 2x
+                    "
+                    src="./images/portfolio/project-5.jpg"
                     alt="Две коробки"
-                    width="370"
-                    height="294"
                   />
                   <p class="working-second-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
@@ -209,10 +223,12 @@
                 <div class="working-box">
                   <img
                     class="working-img"
-                    src="./images/portfolio/projekt-6.jpg"
+                    srcset="
+                      ./images/portfolio/project-6.jpg    1x,
+                      ./images/portfolio/project-6@2x.jpg 2x
+                    "
+                    src="./images/portfolio/project-6.jpg"
                     alt="Монитор"
-                    width="370"
-                    height="294"
                   />
                   <p class="working-second-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
@@ -231,10 +247,12 @@
                 <div class="working-box">
                   <img
                     class="working-img"
-                    src="./images/portfolio/projekt-7.jpg"
+                    srcset="
+                      ./images/portfolio/project-7.jpg    1x,
+                      ./images/portfolio/project-7@2x.jpg 2x
+                    "
+                    src="./images/portfolio/project-7.jpg"
                     alt="Книга"
-                    width="370"
-                    height="294"
                   />
                   <p class="working-second-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
@@ -253,10 +271,12 @@
                 <div class="working-box">
                   <img
                     class="working-img"
-                    src="./images/portfolio/projekt-8.jpg"
+                    srcset="
+                      ./images/portfolio/project-8.jpg    1x,
+                      ./images/portfolio/project-8@2x.jpg 2x
+                    "
+                    src="./images/portfolio/project-8.jpg"
                     alt="Тикет"
-                    width="370"
-                    height="294"
                   />
                   <p class="working-second-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
@@ -275,10 +295,12 @@
                 <div class="working-box">
                   <img
                     class="working-img"
-                    src="./images/portfolio/projekt-9.jpg"
+                    srcset="
+                      ./images/portfolio/project-9.jpg    1x,
+                      ./images/portfolio/project-9@2x.jpg 2x
+                    "
+                    src="./images/portfolio/project-9.jpg"
                     alt="Ноутбук"
-                    width="370"
-                    height="294"
                   />
                   <p class="working-second-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
