--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <button class="button" data-open-modal>Заказать услугу</button>
+          <button class="button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
 
@@ -173,7 +173,8 @@
             <li class="occupation-item">
               <img
                 class="occupation-img"
-                src="./images/portfolio/projekt-6.jpg"
+                srcset="./images/monitor.jpg 1x, ./images/monitor@2x.jpg 2x"
+                src="./images/monitor.jpg"
                 alt="Монитор"
                 width="370"
                 height="294"
@@ -540,7 +541,7 @@
 
     <!-- Модальное окно -->
 
-    <!-- <div class="backdrop is-hidden" data-backdrop>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <p class="modal-subtitle">Оставьте свои данные, мы вам перезвоним</p>
         <form action="#" class="form">
@@ -555,7 +556,7 @@
             />
             <label for="name" class="form-field-label">Имя</label>
             <svg class="form-field-svg" width="12" height="12">
-              <use href="./images/sprite.svg#name"></use>
+              <use href="./images/sprite.svg#person"></use>
             </svg>
           </div>
 
@@ -608,13 +609,13 @@
           </label>
           <button type="submit" class="button-submit">Отправить</button>
         </form>
-        <button class="button-close" data-close-modal>
+        <button class="button-close" data-modal-close>
           <svg class="button-close-svg" width="18" height="18">
             <use href="./images/sprite.svg#close-black"></use>
           </svg>
         </button>
       </div>
-    </div> -->
+    </div>
 
     <!-- <script>
       const refs = {
